<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@drawable/bg_contatos"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nome_contato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email_contato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/telefone_contato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/telefone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>