<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="activity.AdicionarContatos">
    <EditText
        android:id="@+id/contato_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:background="@drawable/bg_edi_tex"
        android:padding="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/contato_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="20dp"
        android:background="@drawable/bg_edi_tex"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        />
    <com.santalu.maskara.widget.MaskEditText
    android:id="@+id/editTelefone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:padding="20dp"
    android:hint="@string/telefone"
    android:background="@drawable/bg_edi_tex"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="10dp"
    app:mask="(__) _____-____"
    app:maskCharacter="_"
    app:maskStyle="completable" />
    <TextView
        android:id="@+id/txt_erro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />
    <Button
        android:id="@+id/bt_adicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_adicionar"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:padding="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        />

</LinearLayout>