<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activity.FormCadastro">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/logo"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="20dp"
        android:background="@drawable/bg_edi_tex"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:padding="20dp"
        android:background="@drawable/bg_edi_tex"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/txtErro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text=""
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        />
    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_cadastrar"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="15dp"
        android:textAllCaps="false"
        android:layout_margin="30dp"
        android:background="@drawable/bg_button"
        />

</LinearLayout>